update preferences font & header style

--- a/src/app/views/onboarding/pages/onboarding-mealpreferences/onboarding-mealpreferences.component.html
+++ b/src/app/views/onboarding/pages/onboarding-mealpreferences/onboarding-mealpreferences.component.html
@@ -7,7 +7,7 @@
 </ion-header>
 <ion-content fullscreen>
 
-	<div class="content-wrapper column start">
+	<div class="content-wrapper column start preferences">
 		<div class="progress">
             <ion-progress-bar indeterminate color="tertiary" value="{{progressValue}}"></ion-progress-bar>
 			<p class="progress-percentage"> {{progressValue * 100}}% Complete</p>
