--- a/src/app/views/onboarding/pages/onboarding-ingredientpreferences/onboarding-ingredientpreferences.component.html
+++ b/src/app/views/onboarding/pages/onboarding-ingredientpreferences/onboarding-ingredientpreferences.component.html
@@ -5,9 +5,14 @@
 		</ion-buttons>
 	</ion-toolbar>
 </ion-header>
-<ion-content>
+<ion-content fullscreen>
 
-	<div class="content-wrapper column">
+	<div class="content-wrapper column start preferences">
+		<div class="progress">
+            <ion-progress-bar indeterminate color="tertiary" value="{{progressValue}}"></ion-progress-bar>
+			<p class="progress-percentage"> {{progressValue * 100}}% Complete</p>
+		</div>
+		<h1 class="content-prompt">Ingredient Preferences</h1>
 		<div class="slide-options">
 			<ion-slides #ingredientSlides>
 				<ion-slide *ngFor="let ingredient of ingredientPreferenceOptions; let ingredientIndex = index">
@@ -17,18 +22,20 @@
 							<ion-card-title>{{ ingredient.title }}</ion-card-title>
 						</ion-card-header>
 						<ion-card-content>
-							<ion-radio-group class="preference-question-group" *ngFor="let question of ingredient.questions; let questionIndex = index" [ngClass]="{'visible': question.active}">
-								<ion-item *ngFor="let option of question.options" (click)="selectPreference(ingredient.id, question.id, option, questionIndex, ingredientIndex)">
-									<ion-radio value="{{ option }}" slot="start"></ion-radio>
-								  	<ion-label text-wrap>{{ option }}</ion-label>
-								</ion-item>
-							  </ion-radio-group>
+							<div class="preference-question-group" *ngFor="let question of ingredient.questions; let questionIndex = index" [ngClass]="{'visible': question.active}">
+								<p class="sub-heading">Question {{ questionIndex + 1 }} of {{ ingredient.questions.length }}:</p>
+								<div *ngFor="let option of question.options; let optionIndex = index" (click)="selectPreference(ingredient.id, question.id, option, questionIndex, ingredientIndex)">
+									<ion-button slot="start" id="ingredient-{{ingredient.id}}{{questionIndex}}{{optionIndex}}"><span>{{ option }}</span></ion-button>
+								</div>
+								<ion-button class="transparent-butt" [ngStyle]="{'display': questionIndex != 0 ? 'none' : 'block'}" (click)="backToPrevQuestion(questionIndex)"> &#60; Back to Previous Card</ion-button>
+								<ion-button class="transparent-butt" [ngStyle]="{'display': questionIndex == 0 ? 'none' : 'block'}" (click)="goBack(questionIndex)"> &#60; Back to Previous Question</ion-button>
+							</div>
 						</ion-card-content>
 					</ion-card>
 				</ion-slide>
 			</ion-slides>
 		</div>
-		<div class="pager">1 of 20 ingredients</div>
+		<div class="pager">{{ page }} of 30 meals</div>
 	</div>
 
 </ion-content>
