--- a/src/global.scss
+++ b/src/global.scss
@@ -244,6 +244,11 @@ h1 {
     border: none;
 }
 
+.details-wrapper {
+    box-shadow: 3px 0px 4px rgba(0, 0, 0, 0.25);
+}
+
+
 /** Font **/
 @font-face {
     font-family: 'robotomedium';
