--- a/src/app/core/components/recipemodal/recipemodal.component.scss
+++ b/src/app/core/components/recipemodal/recipemodal.component.scss
@@ -1,6 +1,6 @@
 .image-wrap {
-    margin: 20px;
-    border-radius: 8px;
+    margin: 20px 20px 0;
+    border-radius: 8px 8px 0px 0px;
     overflow: hidden;
     height: 225px;
 
@@ -9,10 +9,128 @@
         width: 100%;
         height: 100%;
     }
+
+    .butt-close {
+        position: absolute;
+        top: 20px;
+        right: 20px;
+        width: 26px;
+        height: 26px;
+        margin: 9px;
+    }
 }
 
-.butt-close {
-    position: absolute;
-    top: 20px;
-    right: 20px;
+.details-wrapper {
+    padding: 22px 17px 0;
+    h1, p, .detail {
+        padding-left: 7px;
+        padding-right: 7px;
+    }
+}
+
+.meal-details {
+    margin-bottom: 13px;
+    text-align: left;
+
+    h1 {
+        font-size: 24px;
+        line-height: 28px;
+        padding-bottom: 13px;
+
+        font-size: 24px;
+        line-height: 28px;
+        color: var(--ion-color-font-main);
+        font-family: var(--font-family-body);
+        font-weight: var(--font-weight-body);
+        font-style: var(--font-style-body);
+    }
+
+    p {
+        padding-bottom: 13px;
+        margin: 0;
+
+        font-size: 18px;
+        line-height: 23px;
+        color: var(--ion-color-font-main);
+        font-family: var(--font-family-body);
+        font-weight: var(--font-weight-body);
+        font-style: var(--font-style-body);
+    }
+
+    h2 {
+        margin: 9px 0;
+
+        font-size: 18px;
+        line-height: 23px;
+        color: var(--ion-color-font-main);
+        font-family: var(--font-family-meal-subheading);
+        font-weight: var(--font-weight-meal-subheading);
+        font-style: var(--font-style-meal-subheading);
+    }
+
+    &.details-box {
+        padding-right: 0;
+        padding-left: 0;
+    }
+    .detail {
+        display: inline-block;
+        height: 23px;
+        margin-right: 15px;
+
+        .icon {
+            width: 23px;
+            height: 23px;
+            display: inline-block;
+            vertical-align: middle;
+            margin-right: 5px;
+
+            &.ingredients {
+                background: url(../../../../assets/images/icon-ingredients.svg) center center no-repeat;
+                background-size: 90%;
+            }
+
+            &.cooktime {
+                background: url(../../../../assets/images/icon-cooktime.svg) center center no-repeat;
+                background-size: contain;
+            }
+
+
+        }
+
+        .text {
+            vertical-align: bottom;
+            color: var(--ion-color-font-main);
+            font-family: var(--font-family-body);
+            font-weight: var(--font-weight-body);
+            font-style: var(--font-style-body);
+            font-size: 13px;
+            line-height: 17px;
+        }
+
+    }
+
+    
+    .ingredient-item {
+        .text {
+            vertical-align: bottom;
+            color: var(--ion-color-font-main);
+            font-family: var(--font-family-body);
+            font-weight: var(--font-weight-body);
+            font-style: var(--font-style-body);
+            font-size: 14px;
+            line-height: 20px;
+        }
+    }
+}
+
+.details-box {
+    border-bottom: 1px solid var(--ion-color-section-border);
+    margin-bottom: 13px;
+    padding-bottom: 13px;
+    padding-left: 7px;
+    padding-right: 7px;
+
+    &:last-of-type {
+        border-bottom: 0;
+    }
 }
