--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -123,6 +123,22 @@
   --ion-color-disabled-shade: #c8c8c8;
   --ion-color-disabled-tint: #e6e6e6;
 
+  /** section border **/
+  --ion-color-section-border: #EEEEEE;
+  --ion-color-section-border-rgb: 238,238,238;
+  --ion-color-section-border-contrast: #000000;
+  --ion-color-section-border-contrast-rgb: 0,0,0;
+  --ion-color-section-border-shade: #d1d1d1;
+  --ion-color-section-border-tint: #f0f0f0;
+
+  /** list node **/
+  --ion-color-list-node: #C4C4C4;
+  --ion-color-list-node-rgb: 196,196,196;
+  --ion-color-list-node-contrast: #000000;
+  --ion-color-list-node-contrast-rgb: 0,0,0;
+  --ion-color-list-node-shade: #acacac;
+  --ion-color-list-node-tint: #cacaca;
+  
   /** logo font **/
   --font-family-logo: rubikbold;
   --font-style-logo: normal;
@@ -147,14 +163,6 @@
   --font-family-meal-subheading: robotomedium;
   --font-style-meal-subheading: normal;
   --font-weight-bumeal-subheadingtton: normal;
-
-  /** section border **/
-  --ion-color-section-border: #EEEEEE;
-  --ion-color-section-border-rgb: 238,238,238;
-  --ion-color-section-border-contrast: #000000;
-  --ion-color-section-border-contrast-rgb: 0,0,0;
-  --ion-color-section-border-shade: #d1d1d1;
-  --ion-color-section-border-tint: #f0f0f0;
 }
 
 @media (prefers-color-scheme: dark) {
