--- a/src/global.scss
+++ b/src/global.scss
@@ -118,6 +118,12 @@
 
     }
 
+    .recipe-modal {
+        .modal-wrapper {
+            margin-top: 36px;
+            border-radius: 8px 8px 0 0;
+        }
+    }
 }
 
 .content-wrapper {
