--- a/src/global.scss
+++ b/src/global.scss
@@ -189,6 +189,7 @@
                 font-size: 14px;
                 line-height: 20px;
                 padding-top: 6px;
+                vertical-align: bottom;
             }
 
             .transparent-butt {
