update progress value as percentage

--- a/src/app/views/onboarding/pages/onboarding-ingredientpreferences/onboarding-ingredientpreferences.component.html
+++ b/src/app/views/onboarding/pages/onboarding-ingredientpreferences/onboarding-ingredientpreferences.component.html
@@ -10,7 +10,7 @@
 	<div class="content-wrapper column start preferences">
 		<div class="progress">
             <ion-progress-bar indeterminate color="tertiary" value="{{progressValue}}"></ion-progress-bar>
-			<p class="progress-percentage"> {{progressValue * 100}}% Complete</p>
+			<p class="progress-percentage"> {{ percentage }}% Complete</p>
 		</div>
 		<h1 class="content-prompt">Ingredient Preferences</h1>
 		<div class="slide-options">
