Onboarding style updates

--- a/src/app/views/login/login.page.html
+++ b/src/app/views/login/login.page.html
@@ -10,7 +10,7 @@
 				<form (ngSubmit)="login()" [formGroup]="loginForm">
 					<ion-input formControlName="email" type="email" placeholder="Username"></ion-input>
 					<ion-input formControlName="password" type="password" placeholder="Password"></ion-input>
-					<ion-button type="submit" [disabled]="formDisabled">Login</ion-button>
+					<ion-button mode="ios" type="submit" [disabled]="formDisabled">Login</ion-button>
 					<div class="error" [ngClass]="{'is-error': state === 'error'}">{{ errorMessage }}</div>
 				</form>
 			</ion-card-content>
