--- a/src/app/views/onboarding/pages/onboarding-preferences/onboarding-preferences.component.html
+++ b/src/app/views/onboarding/pages/onboarding-preferences/onboarding-preferences.component.html
@@ -1,6 +1,6 @@
 <ion-header [translucent]="true">
     <ion-toolbar>
-        <ion-buttons slot="start">
+        <ion-buttons mode="ios" slot="start">
             <ion-back-button></ion-back-button>
         </ion-buttons>
     </ion-toolbar>
@@ -22,7 +22,7 @@
 
                 <ion-card-content>
                     <p>To help us customise your meal plan, tell us whether you like (or don't like) the following meals and ingredients.</p>
-                    <ion-button color="primary" (click)="next()">Next</ion-button>
+                    <ion-button mode="ios" color="primary" (click)="next()">Next</ion-button>
                 </ion-card-content>
 
                 <div class="loading-overlay">
