--- a/src/app/core/components/recipemodal/recipemodal.component.html
+++ b/src/app/core/components/recipemodal/recipemodal.component.html
@@ -1,7 +1,7 @@
 <ion-content>
     <div class="image-wrap">
         <img src="{{ recipe.image }}" />
-        <img class="butt-close" (click)="closeModal()" src="{{ closeImgSrc }}" />
+        <img class="butt-close" (click)="closeModal()" src="../../../assets/images/icon-close.svg" />
     </div>
     <div class="meal-details details-wrapper ">
         <h1>{{ recipe.title }}</h1>
