--- a/src/app/views/mealselection/pages/mealselection-selectmeal/mealselection-selectmeal.component.scss
+++ b/src/app/views/mealselection/pages/mealselection-selectmeal/mealselection-selectmeal.component.scss
@@ -128,6 +128,10 @@ ion-slides {
     margin-bottom: 30px;
 }
 
+.small {
+    margin-bottom: 20px;
+}
+
 .meal-slots {
     width: 100%;
     min-height: 120px;
