--- a/src/app/views/onboarding/pages/onboarding-complete/onboarding-complete.component.html
+++ b/src/app/views/onboarding/pages/onboarding-complete/onboarding-complete.component.html
@@ -1,6 +1,6 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-      <ion-buttons slot="start">
+      <ion-buttons mode="ios" slot="start">
           <ion-back-button></ion-back-button>
       </ion-buttons>
   </ion-toolbar>
