--- a/src/app/views/onboarding/pages/onboarding-getstarted/onboarding-getstarted.page.html
+++ b/src/app/views/onboarding/pages/onboarding-getstarted/onboarding-getstarted.page.html
@@ -9,7 +9,7 @@
 			<ion-card-content>
 				<p>To help us create yummy meal ideas for you, we need to grab some information about what you like (and don't like) to eat!</p>
 				<p>This process should take about 5 minutes.</p>
-				<ion-button color="primary" (click)="getStarted()">Get Started</ion-button>
+				<ion-button mode="ios" color="primary" (click)="getStarted()">Get Started</ion-button>
 			</ion-card-content>
 
 			<div class="loading-overlay">
