--- a/src/app/views/onboarding/pages/onboarding-ingredientpreferences/onboarding-ingredientpreferences.component.html
+++ b/src/app/views/onboarding/pages/onboarding-ingredientpreferences/onboarding-ingredientpreferences.component.html
@@ -1,6 +1,6 @@
 <ion-header [translucent]="true">
 	<ion-toolbar>
-		<ion-buttons slot="start" (click)="prevStage()">
+		<ion-buttons mode="ios" slot="start" (click)="prevStage()">
 			<ion-back-button></ion-back-button>
 		</ion-buttons>
 	</ion-toolbar>
@@ -17,16 +17,16 @@
 			<ion-slides #ingredientSlides (ionSlideDidChange)="onSlideChange()">
 				<ion-slide *ngFor="let ingredient of ingredientPreferenceOptions; let ingredientIndex = index">
 					<ion-card>
-						<img src="{{ ingredient.image }}" />
+						<div class="image-wrap">
+							<img src="{{ ingredient.image }}" />
+						</div>
 						<ion-card-header>
 							<ion-card-title>{{ ingredient.title }}</ion-card-title>
 						</ion-card-header>
 						<ion-card-content>
 							<div class="preference-question-group" *ngFor="let question of ingredient.questions; let questionIndex = index" [ngClass]="{'visible': question.active}">
 								<p class="sub-heading">Question {{ questionIndex + 1 }} of {{ ingredient.questions.length }}:</p>
-								<div *ngFor="let option of question.options; let optionIndex = index" (click)="selectPreference(ingredient.id, question.id, option, questionIndex, ingredientIndex)">
-									<ion-button slot="start" id="ingredient-{{ingredient.id}}{{questionIndex}}{{optionIndex}}"><span>{{ option }}</span></ion-button>
-								</div>
+								<ion-button mode="ios" *ngFor="let option of question.options; let optionIndex = index" (click)="selectPreference(ingredient.id, question.id, option, questionIndex, ingredientIndex, optionIndex)" color="{{ option.selected ? 'secondary' : 'primary'}}" slot="start" id="ingredient-{{ingredient.id}}{{questionIndex}}{{optionIndex}}"><span>{{ option.title }}</span></ion-button>
 								<ion-button class="transparent-butt" [ngStyle]="{'display': (ingredientIndex == 0 && questionIndex == 0) ? 'block' : 'none' }" (click)="goBack()"> &#60; Back to Previous Card</ion-button>
 								<ion-button class="transparent-butt" [ngClass]="{'hidden': questionIndex == 0, 'not-display': ingredientIndex == 0 && questionIndex == 0 }" (click)="backToPrevQuestion(questionIndex)"> &#60; Back to Previous Question</ion-button>
 							</div>
