--- a/src/app/views/onboarding/pages/onboarding-mealpreferences/onboarding-mealpreferences.component.html
+++ b/src/app/views/onboarding/pages/onboarding-mealpreferences/onboarding-mealpreferences.component.html
@@ -1,6 +1,6 @@
 <ion-header [translucent]="true">
 	<ion-toolbar>
-		<ion-buttons slot="start" (click)="prevStage()">
+		<ion-buttons mode="ios" slot="start" (click)="prevStage()">
 			<ion-back-button></ion-back-button>
 		</ion-buttons>
 	</ion-toolbar>
@@ -17,7 +17,9 @@
 			<ion-slides #mealSlides (ionSlideDidChange)="onSlideChange()">
 				<ion-slide *ngFor="let meal of mealPreferenceOptions; let mealIndex = index">
 					<ion-card>
-						<img src="{{ meal.image }}" />
+						<div class="image-wrap">
+							<img src="{{ meal.image }}" />
+						</div>
 						<ion-card-header>
 							<ion-card-title>{{ meal.title }}</ion-card-title>
 						</ion-card-header>
@@ -31,9 +33,7 @@
 							<p class="description">{{ meal.description }}</p>
 							<div class="preference-question-group" *ngFor="let question of meal.questions; let questionIndex = index" [ngClass]="{'visible': question.active}">
 								<p class="sub-heading">Question {{ questionIndex + 1 }} of {{ meal.questions.length }}:</p>
-								<div *ngFor="let option of question.options; let optionIndex = index" (click)="selectPreference(meal.id, question.id, option, optionIndex, questionIndex, mealIndex)">
-									<ion-button slot="start" (click)="selectMeal(mealIndex)" id="option-{{meal.id}}{{questionIndex}}{{optionIndex}}"><span>{{ option }}</span></ion-button>
-								</div>
+								<ion-button *ngFor="let option of question.options; let optionIndex = index" (click)="selectPreference(meal.id, question.id, option, optionIndex, questionIndex, mealIndex)" class="butt-preference" [ngClass]="{'selected': option.selected}" color="{{ option.selected ? 'secondary' : 'primary'}}" slot="start" mode="ios" id="option-{{meal.id}}{{questionIndex}}{{optionIndex}}"><span>{{ option.title }}</span></ion-button>
 								<ion-button class="transparent-butt" [ngClass]="{'hidden': questionIndex == 0}" (click)="backToPrevQuestion(questionIndex)"> &#60; Back to Previous Question</ion-button>
 
 							</div>
