--- a/src/global.scss
+++ b/src/global.scss
@@ -95,7 +95,6 @@
     ion-button {
         width: 100%;
         --border-radius: 50px;
-
         color: var(--ion-color-font-button);
         font-family: var(--font-family-button);
         font-style: var(--font-style-button);
@@ -114,6 +113,10 @@
             border: 3px solid var(--ion-color-primary);
             color: var(--ion-color-primary);
             font-size: 14px;
+
+            span {
+                text-transform: uppercase;
+            }
         }
 
     }
@@ -159,6 +162,16 @@
             box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
             margin-top: 13px;
             margin-bottom: 13px;
+
+            .image-wrap {
+                height: 225px;
+
+                img {
+                    object-fit: cover;
+                    width: 100%;
+                    height: 100%;
+                }
+            }
         }
 
         ion-card-header {
@@ -232,6 +245,20 @@
                     white-space: normal;
                     padding: 2px;
                     letter-spacing: 0;
+                }
+
+                &.small {
+                    margin-bottom: 20px;
+
+                    span {
+                        font-family: var(--font-family-button);
+                        font-style: var(--font-style-button);
+                        font-weight: var(--font-weight-button);
+                        text-transform: uppercase;
+                        padding: 0;
+                        letter-spacing: 0.1em;
+                        margin-top: 2px;
+                    }
                 }
 
                 &.selected, &:active, &:hover, &:focus {
@@ -389,7 +416,7 @@ p {
     font-family: var(--font-family-body);
     font-style: var(--font-style-body);
     font-weight: var(--font-weight-body);
-
+    margin-bottom: 20px;
     width: 100%;
     text-align: center;
 }
