--- a/src/app/views/onboarding/pages/onboarding-mealpreferences/onboarding-mealpreferences.component.html
+++ b/src/app/views/onboarding/pages/onboarding-mealpreferences/onboarding-mealpreferences.component.html
@@ -14,7 +14,7 @@
 		</div>
 		<h1 class="content-prompt">Meal Preferences</h1>
 		<div class="slide-options">
-			<ion-slides #mealSlides (ionSlideDidChange)="onSlideChange()">
+			<ion-slides #mealSlides (ionSlideDidChange)="onSlideChange()" >
 				<ion-slide *ngFor="let meal of mealPreferenceOptions; let mealIndex = index">
 					<ion-card>
 						<div class="image-wrap">
@@ -30,7 +30,10 @@
 									<span class="sub-heading">Ingredients</span>
 								</div>
 							</div>
-							<p class="description">{{ meal.description }}</p>
+							<p class=""><span class="fade">{{ meal.description }}{{ meal.description }}</span>
+								<span class="butt-show-more" (click)="openIngredients()">SHOW MORE</span>
+							</p>
+							<!-- <p class="show-more"><span class="butt-show-more" (click)="openIngredients()">SHOW MORE</span></p> -->
 							<div class="preference-question-group" *ngFor="let question of meal.questions; let questionIndex = index" [ngClass]="{'visible': question.active}">
 								<p class="sub-heading">Question {{ questionIndex + 1 }} of {{ meal.questions.length }}:</p>
 								<ion-button *ngFor="let option of question.options; let optionIndex = index" (click)="selectPreference(meal.id, question.id, option, optionIndex, questionIndex, mealIndex)" class="butt-preference" [ngClass]="{'selected': option.selected}" color="{{ option.selected ? 'secondary' : 'primary'}}" slot="start" mode="ios" id="option-{{meal.id}}{{questionIndex}}{{optionIndex}}"><span>{{ option.title }}</span></ion-button>
