--- a/src/global.scss
+++ b/src/global.scss
@@ -148,7 +148,7 @@
         text-transform: uppercase;
     }
 
-    .recipe-modal {
+    .recipe-modal, .ingredient-modal {
         .modal-wrapper {
             margin-top: 36px;
             border-radius: 8px 8px 0 0;
