--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,13 @@
 <ion-app>
-  <ion-router-outlet></ion-router-outlet>
+    <ion-menu side="end" type="push" contentId="main">
+        <ion-content>
+            <ion-list>
+                <ion-item>Meal Plan</ion-item>
+                <ion-item>Shopping List</ion-item>
+                <ion-item>Reviews</ion-item>
+                <ion-item>Logout</ion-item>
+            </ion-list>
+        </ion-content>
+    </ion-menu>
+    <ion-router-outlet id="main"></ion-router-outlet>
 </ion-app>
