--- a/src/app/core/components/ingredientmodal/ingredientmodal.component.html
+++ b/src/app/core/components/ingredientmodal/ingredientmodal.component.html
@@ -4,7 +4,7 @@
   </div>
   <div class="content">
       <p class="header">Ingredients</p>
-      <p>dhsnke</p>
+      <p>{{ recipe.description }}</p>
   </div>
 
 </ion-content>
