--- a/src/app/views/onboarding/pages/onboarding-numberofmeals/onboarding-numberofmeals.component.html
+++ b/src/app/views/onboarding/pages/onboarding-numberofmeals/onboarding-numberofmeals.component.html
@@ -23,9 +23,9 @@
               <ion-card-content>
                   <p>How many recipes do you want to prepare this week?</p>
                   <div class="input-fields">
-                    <ion-img class="minus" [src]="iconMinus"></ion-img>
-                    <ion-input></ion-input>
-                    <ion-img class="plus" [src]="iconPlus"></ion-img>  
+                    <ion-img class="minus" [src]="iconMinus" (click)="setNumberOfMeals('minus')"></ion-img>
+                    <ion-input [(ngModel)]="numberOfMeals"></ion-input>
+                    <ion-img class="plus" [src]="iconPlus" (click)="setNumberOfMeals('plus')"></ion-img>  
                   </div>
                   <ion-button mode="ios" color="primary" (click)="next()">Next</ion-button>
               </ion-card-content>
