Pull in selected meal slots from data service.

--- a/src/app/views/dashboard/pages/recipes/recipes.component.html
+++ b/src/app/views/dashboard/pages/recipes/recipes.component.html
@@ -8,5 +8,9 @@
     </ion-toolbar>
   </ion-header>
 <ion-content fullscreen>
-    hello
+
+    <div *ngFor="let meal of mealSlots">
+        {{ meal.recipe.title }}
+    </div>
+
 </ion-content>
