--- a/src/app/views/onboarding/pages/onboarding-numberofmeals/onboarding-numberofmeals.component.scss
+++ b/src/app/views/onboarding/pages/onboarding-numberofmeals/onboarding-numberofmeals.component.scss
@@ -9,14 +9,25 @@ ion-content {
 .input-fields {
     display: flex;
     flex-direction: row;
+    width: 100%;
+    justify-content: center;
+
     ion-img {
         width: 51px;
         height: 51px;
         margin: 11px 0;
     }
-    ion-input {
-        width: 110px;
+    
+    .number-box {
+        min-width: 110px;
         height: 52px;
         margin: auto 17px;
+        background-color: var(--ion-color-input-background);
+        border: 1px solid var(--ion-color-input-border);
+        text-align: center;
+
+        p {
+            margin-top: 2px;
+        }
     }
 }
