update button style & ion-item margin&padding

--- a/src/app/views/mealselection/pages/mealselection-summary/mealselection-summary.component.html
+++ b/src/app/views/mealselection/pages/mealselection-summary/mealselection-summary.component.html
@@ -15,7 +15,7 @@
         <ion-label>
         <h2>{{ mealslot.recipe.title }}</h2>
         <p>{{ mealslot.recipe.description }}</p>
-        <p>Change Meal</p>
+        <p class="text-button">Change Meal</p>
         </ion-label>
     </ion-item>
     <ion-button color="primary" (click)="goToNext()">Confirm</ion-button>
