update desxriptin to ingredient & font

--- a/src/app/core/components/ingredientmodal/ingredientmodal.component.scss
+++ b/src/app/core/components/ingredientmodal/ingredientmodal.component.scss
@@ -15,7 +15,7 @@
     color: var(--ion-color-font-main);
     font-family: var(--font-family-meal-subheading);
     font-weight: var(--font-weight-heading);
-    font-style: var(--font-style-logo);
+    font-style: var(--font-weight-meal-subheading);
 }
 
 p {
