add text-wrap for label

--- a/src/app/views/mealselection/pages/mealselection-summary/mealselection-summary.component.html
+++ b/src/app/views/mealselection/pages/mealselection-summary/mealselection-summary.component.html
@@ -12,7 +12,7 @@
         <ion-thumbnail slot="start">
             <img src="{{ mealslot.recipe.image }}">
         </ion-thumbnail>
-        <ion-label>
+        <ion-label text-wrap>
         <h2>{{ mealslot.recipe.title }}</h2>
         <p>{{ mealslot.recipe.description }}</p>
         <p class="text-button">Change Meal</p>
