update ion-label style

--- a/src/app/views/mealselection/pages/mealselection-summary/mealselection-summary.component.html
+++ b/src/app/views/mealselection/pages/mealselection-summary/mealselection-summary.component.html
@@ -13,9 +13,9 @@
             <img src="{{ mealslot.recipe.image }}">
         </ion-thumbnail>
         <ion-label text-wrap>
-        <h2>{{ mealslot.recipe.title }}</h2>
-        <p>{{ mealslot.recipe.description }}</p>
-        <p class="text-button">Change Meal</p>
+            <h2>{{ mealslot.recipe.title }}</h2>
+            <div class="description">{{ mealslot.recipe.description }}</div>
+            <p class="text-button">Change Meal</p>
         </ion-label>
     </ion-item>
     <ion-button color="primary" (click)="goToNext()">Confirm</ion-button>
