--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -147,6 +147,14 @@
   --ion-color-list-node-shade: #acacac;
   --ion-color-list-node-tint: #cacaca;
 
+  /** tab bar **/
+  --ion-color-tabbar: #fafafa;
+  --ion-color-tabbar-rgb: 250,250,250;
+  --ion-color-tabbar-contrast: #000000;
+  --ion-color-tabbar-contrast-rgb: 0,0,0;
+  --ion-color-tabbar-shade: #dcdcdc;
+  --ion-color-tabbar-tint: #fbfbfb;
+
   /** logo font **/
   --font-family-logo: rubikbold;
   --font-style-logo: normal;
