refactor header & footer

--- a/src/app/views/dashboard/pages/shoppinglist/shoppinglist.component.html
+++ b/src/app/views/dashboard/pages/shoppinglist/shoppinglist.component.html
@@ -1,5 +1,12 @@
 <ion-header [translucent]="false">
-  <ion-toolbar>
+  <ion-toolbar class="with-border">
+      <ion-item lines="none">
+        <ion-thumbnail>
+            <img src="../../../../../assets/images/splash.svg">
+        </ion-thumbnail>
+        <ion-label>Chef</ion-label>
+      </ion-item>
+
       <ion-buttons mode="ios" slot="end">
           <ion-buttons slot="start">
               <ion-menu-button autoHide="false"></ion-menu-button>
