--- a/src/app/views/dashboard/pages/shoppinglist/shoppinglist.component.scss
+++ b/src/app/views/dashboard/pages/shoppinglist/shoppinglist.component.scss
@@ -1,6 +1,8 @@
 ion-content {
     --padding-start: 24px;
     --padding-end: 24px;
+    --padding-top: 53px;
+
     .content-wrapper {
         align-items: flex-start;
 
@@ -17,9 +19,9 @@ ion-content {
         h2 {
             font-size: 18px;
             line-height: 23px;
-            font-family: var(--font-family-button);
-            font-style: var(--font-style-button);
-            // font-weight: var(--font-weight-button);
+            font-family: var(--font-family-title);
+            font-style: var(--font-style-title);
+            font-weight: var(--font-weight-title);
             margin-top: 22px;
             margin-bottom: 12px;
         }
@@ -36,6 +38,10 @@ ion-content {
                 line-height: 26px;
                 margin: 0 0 8px;
             }
+        }
+
+        .mealslot:last-of-type {
+            margin-bottom: 100px;
         }
     }
     
