--- a/src/app/views/mealselection/pages/mealselection-summary/mealselection-summary.component.html
+++ b/src/app/views/mealselection/pages/mealselection-summary/mealselection-summary.component.html
@@ -18,5 +18,5 @@
             <p class="text-button">Change Meal</p>
         </ion-label>
     </ion-item>
-    <ion-button color="primary" (click)="goToNext()">Confirm</ion-button>
+    <ion-button color="primary" (click)="setWeekStartDate()">Confirm</ion-button>
 </ion-content>
