--- a/src/app/views/dashboard/pages/dashboard/dashboard.component.html
+++ b/src/app/views/dashboard/pages/dashboard/dashboard.component.html
@@ -1,15 +1,15 @@
 <ion-tabs mode="ios">
     <ion-tab-bar slot="bottom">
         <ion-tab-button tab="recipes">
-            <ion-icon name="calendar"></ion-icon>
+            <ion-icon name="pizza-outline"></ion-icon>
             <ion-label>Recipes</ion-label>
         </ion-tab-button>
         <ion-tab-button tab="shoppinglist">
-            <ion-icon name="calendar"></ion-icon>
+            <ion-icon name="reader-outline"></ion-icon>
             <ion-label>Shopping List</ion-label>
         </ion-tab-button>
         <ion-tab-button tab="reviews">
-            <ion-icon name="calendar"></ion-icon>
+            <ion-icon name="thumbs-up-outline"></ion-icon>
             <ion-label>Reviews</ion-label>
         </ion-tab-button>
     </ion-tab-bar>
