--- a/src/app/views/dashboard/pages/recipes/recipes.component.html
+++ b/src/app/views/dashboard/pages/recipes/recipes.component.html
@@ -1,5 +1,12 @@
 <ion-header [translucent]="false">
-    <ion-toolbar>
+    <ion-toolbar class="with-border">
+        <ion-item lines="none">
+          <ion-thumbnail>
+              <img src="../../../../../assets/images/splash.svg">
+          </ion-thumbnail>
+          <ion-label>Chef</ion-label>
+        </ion-item>
+
         <ion-buttons mode="ios" slot="end">
             <ion-buttons slot="start">
                 <ion-menu-button autoHide="false"></ion-menu-button>
@@ -15,8 +22,10 @@
 
     <div class="content-wrapper column start" *ngIf="!isNewWeek && !isLoading">
 
-        <h1>Meal Plan</h1>
-        <p>Here is your personalised yummy meal plan with {{ mealSlots.length }} meals.</p>
+        <div class="page-info">
+            <h1>Meal Plan</h1>
+            <p>Here is your personalised yummy meal plan with {{ mealSlots.length }} meals.</p>
+        </div>
 
         <div class="mealslot" *ngFor="let meal of mealSlots">
 
@@ -36,7 +45,7 @@
                         <span class="text">{{ meal.recipe.ingredients.length }} ingredients</span>
                     </div>
                 </div>
-                <ion-button mode="ios" color="primary">View &amp; Cook Meal</ion-button>
+                <ion-button mode="ios" color="primary" (click)="openRecipe(meal.recipe)">View &amp; Cook Meal</ion-button>
             </div>
 
         </div>
@@ -45,8 +54,8 @@
 
     <div class="content-wrapper column" *ngIf="isNewWeek && !isLoading">
 
-        <p>It's the start of a new week! Time to pick a new meal plan!</p>
-        <ion-button mode="ios" color="primary">Pick Meals</ion-button>
+        <p>You have no selected meals for this week.</p>
+        <ion-button mode="ios" color="primary" (click)="startWeeklyFlow()">Pick Weekly Meals</ion-button>
 
     </div>
 
