--- a/src/app/views/dashboard/pages/recipes/recipes.component.scss
+++ b/src/app/views/dashboard/pages/recipes/recipes.component.scss
@@ -1,3 +1,9 @@
+ion-content {
+    --padding-start: 24px;
+    --padding-end: 24px;
+    --padding-top: 53px;
+}
+
 .mealslot {
     width: 90%;
     max-width: 400px;
@@ -22,4 +28,8 @@
             border-top-right-radius: 8px;
         }
     }
+}
+
+.page-info {
+    text-align: left;
 }
