--- a/src/app/views/mealselection/pages/mealselection-summary/mealselection-summary.component.scss
+++ b/src/app/views/mealselection/pages/mealselection-summary/mealselection-summary.component.scss
@@ -2,6 +2,14 @@ ion-content {
     --padding-start: 18px;
     --padding-end: 18px;
 
+    .content-wrapper {
+        align-items: start;
+    }
+
+    .page-info {
+        text-align: left;
+    }
+
     h1{
         font-size: 36px;
         line-height: 45px;
@@ -16,13 +24,17 @@ ion-content {
         margin-bottom: 15px;
     }
 
+    ion-button {
+        width: 240px;
+    }
+
     ion-item {
         padding-inline-start: 0;
         padding-inline-end: 0;
         border: 1px solid var(--ion-color-input-border);
         border-radius: 8px;
-        margin: 18px auto;
-
+        margin-bottom: 18px;
+        width: 100%;
         height: 126px;
 
         &:last-of-type {
@@ -80,7 +92,7 @@ ion-content {
             -webkit-line-clamp: 2;
             -webkit-box-orient: vertical;
             overflow: hidden;
-            text-overflow: ellipsis; 
+            text-overflow: ellipsis;
         }
     }
 }
