--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -155,6 +155,14 @@
   --ion-color-tabbar-shade: #dcdcdc;
   --ion-color-tabbar-tint: #fbfbfb;
 
+  /** **/
+  --ion-color-background-notification: #CE7BF5;
+  --ion-color-background-notification-rgb: 206,123,245;
+  --ion-color-background-notification-contrast: #000000;
+  --ion-color-background-notification-contrast-rgb: 0,0,0;
+  --ion-color-background-notification-shade: #b56cd8;
+  --ion-color-background-notification-tint: #d388f6;
+  
   /** logo font **/
   --font-family-logo: rubikbold;
   --font-style-logo: normal;
